traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if(getMondeHauteur()==getY()){
    ^