traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  
  
  def fini:Boolean{
    if(getMondeHauteur()==getY()){
      if(getMondeLargeur()==getX()){
        return true
      }else{
        return false
      }
      
    }else{
      return false
    }
  }
  
  
}